# continuous-latent-thought

./: .gitignore  EXECUTIVE_SUMMARY.zh-CN.md  pyproject.toml
docs/: ASCEND_NPU_ENV.md  PHASE0.md  PHASE1A.md  PHASE1B.md  PHASE1B_NPU_RESULTS.md  PHASE1C_EVAL_AND_DIAGNOSTICS.md  PHASE1D_LADDER_RESULTS.md  PHASE2_DUAL_TRACK.md  PHASE2_RESULTS_REPORT_ZH.md  QWEN_INTEGRATION.md
scripts/: npu_smoke.py  run_phase1a_smoke.sh  run_phase1b_direct_curve.sh  run_phase1b_k_sweep.sh  run_phase1b_method_matrix.sh  run_phase1b_multiseed_matrix.sh  run_phase1b_ood_diagnosis.sh  run_phase1d_ladder_matrix.sh  run_phase2_dual_track.sh  run_qwen_smoke.sh  with_ascend_env.sh  with_conda_npu.sh
src/clt/: __init__.py  data.py  generate_data.py  tasks.py  tiny_model.py  train_tiny.py
src/fdt/: build_dataset.py  formats.py  tokenizer.py  train_qwen.py
tests/: test_data_and_formats.py  test_tasks.py
